--- a/src/output.css
+++ b/src/output.css
@@ -48,6 +48,7 @@
     --color-rose-50: oklch(96.9% 0.015 12.422);
     --color-rose-100: oklch(94.1% 0.03 12.58);
     --color-rose-200: oklch(89.2% 0.058 10.001);
+    --color-rose-300: oklch(81% 0.117 11.638);
     --color-rose-600: oklch(58.6% 0.253 17.585);
     --color-rose-700: oklch(51.4% 0.222 16.935);
     --color-rose-800: oklch(45.5% 0.188 13.697);
@@ -298,6 +299,9 @@
   }
   .right-0 {
     right: calc(var(--spacing) * 0);
+  }
+  .right-2 {
+    right: calc(var(--spacing) * 2);
   }
   .right-4 {
     right: calc(var(--spacing) * 4);
@@ -1314,6 +1318,9 @@
   .ring-rose-100 {
     --tw-ring-color: var(--color-rose-100);
   }
+  .ring-rose-300 {
+    --tw-ring-color: var(--color-rose-300);
+  }
   .ring-violet-100 {
     --tw-ring-color: var(--color-violet-100);
   }
@@ -1398,6 +1405,10 @@
   .outline-none {
     --tw-outline-style: none;
     outline-style: none;
+  }
+  .select-none {
+    -webkit-user-select: none;
+    user-select: none;
   }
   .hover\:bg-blue-50 {
     &:hover {
